--- a/main.html
+++ b/main.html
@@ -5,10 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- add table here -->
+	<table>
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Kills</th>
+				<th>Save</th>
+				<th>Win</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Ram</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+			</tr>
+			<tr>
+				<td>Shyam</td>
+				<td>5</td>
+				<td>7</td>
+				<td>3</td>
+			</tr>
+			<tr>
+				<td>Ram</td>
+				<td>4</td>
+				<td>8</td>
+				<td>7</td>
+			</tr>
+		</tbody>
+	</table>
 
         
 </body>
